k8s/cm-acme-http-solver-d9fnw.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cm-acme-http-solver-d9fnw
  namespace: poltr
  labels:
    acme.cert-manager.io/http01-solver: "true"
    acme.cert-manager.io/http-domain: "bgs.poltr.info"
    acme.cert-manager.io/http-token: "REPLACE_WITH_TOKEN"
    app: cm-acme-http-solver
spec:
  containers:
    - name: acmesolver
      image: quay.io/jetstack/cert-manager-acmesolver:v1.12.0
      args:
        - --listen-port=8089
        - --domain=bgs.poltr.info
        - "--token=REPLACE_WITH_TOKEN"
        - "--key=REPLACE_WITH_KEY"
      ports:
        - containerPort: 8089
      resources:
        requests:
          cpu: "10m"
          memory: "64Mi"
        limits:
          cpu: "100m"
          memory: "64Mi"
  nodeSelector:
    kubernetes.io/os: linux
  tolerations:
    - key: "node.kubernetes.io/not-ready"
      operator: "Exists"
      effect: "NoExecute"
    - key: "node.kubernetes.io/unreachable"
      operator: "Exists"
      effect: "NoExecute"
